--- a/lab-james/server/package.json
+++ b/lab-james/server/package.json
@@ -13,13 +13,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.188.0",
     "bcrypt": "^1.0.3",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
+    "fs-extra": "^5.0.0",
     "jsonwebtoken": "^8.1.0",
-    "mongoose": "^5.0.0-rc2"
+    "mongoose": "^5.0.0-rc2",
+    "multer": "^1.3.0",
+    "require-dir": "^0.3.2"
   }
 }
